h2. Changelog

h3. Versión 1.2.4

* Elemento fecha, tiene nuevos parámetros: ancho y anchoTitulo
* Agregado comando fap:dist
* Agregado comando fap:winservice
* Agregada Documentación para configurar emails
* Agregada Documentación para configurar logs
* Agregada Documentación para configurar el deploy

h3. Versión 1.2.3

* Ahora se borran los tipos de documentos cuando actualiza los cambios
* Fixed bug con los plugins de eclipse
* Fixed bug de subida documentos AED

h3. Versión 1.2.2

* Fixed bug al generar la validación de la Persona Física.
* Fixed bug en el texto de los botones enlazados a páginas.
* La url de descargas de los documentos ahora es relativa.
* Fixed bug en los combos ManyToOne.
* Direcciones correctas en los JS de platino (PRO y PRE).


h3. Versión 1.2.1

* Fixed bug en combos de referencia sin comboTexto.
* Fixed bug en permisos en Popups.
* Fixed bug en firma de mancomunados.
* Fixed bug en generación (Faltaba "import java.util.ArrayList").

h3. Versión 1.2

* Nueva interfaz de permisos que permite sobrescribir los permisos definidos
en el módulo
* Inyección de dependencias utilizando Google Guice.
* Permitir creacion de Enumerados Java a partir de Listas FAP
* Posibilidad de personalizar las páginas mediante código JavaScript
* Fixed bug AutoEnviar (Form) Area de Texto
* Generar documentacion HTML de los ficheros *.fap
* Fixed lazy load de collections en AuditLogListener (problemas con los ManyToOne).
* Fixed bug copia de atributos ManyToOne y ManyToMany.
* Fixed funcionalidad de selección de filas en una tabla mediante checkboxes.
* Funcionalidad de 'include' y 'exclude' en ColumnasAutomáticas.
* Opción de 'password' en los campos de tipo Texto.

h3. Versión 1.1.1

* ID de tabla requerido.
* Nombres de variables en permiso arreglado.
* Página de recibos de aportación arreglada.
* El elemento Wiki pasa de utilizar WikiMedia a Textile, que es el formato que se está usando en esta propia documentación. 
* Personalizado el error 404