@@ -13,7 +13,7 @@
 }%
 
 	#{if label != null}
-		#{fap.grupo titulo:label, siCombo:siCombo, siComboValue:siComboValue, borde:grupoVisible}
+		#{fap.grupo titulo:label, siCombo:siCombo, siComboValue:siComboValue, visible:grupoVisible}
 			#{fap.texto id:id + '_nombre', titulo:play.i18n.Messages.get('fap.tags.personafisica.nombre'), campo:campo + '.nombre', requerido:requerido, obj:obj /}		
 			#{fap.texto id:id + '_primerApellido', titulo:play.i18n.Messages.get('fap.tags.personafisica.primerApellido'), campo:campo + '.primerApellido', requerido:requerido, obj:obj /}		
 			#{fap.texto id:id + '_segundoApellido', titulo:play.i18n.Messages.get('fap.tags.personafisica.segundoApellido'), campo:campo + '.segundoApellido', obj:obj /}		
@@ -21,12 +21,12 @@
 		#{/fap.grupo}
 	#{/if}
 	#{else}
-		#{fap.grupo siCombo:siCombo, siComboValue:siComboValue, borde:false}
+		#{fap.grupo siCombo:siCombo, siComboValue:siComboValue, visible:false}
 			#{fap.texto id:id + '_nombre', titulo:play.i18n.Messages.get('fap.tags.personafisica.nombre'), campo:campo + '.nombre', requerido:requerido, obj:obj /}		
 			#{fap.texto id:id + '_primerApellido', titulo:play.i18n.Messages.get('fap.tags.personafisica.primerApellido'), campo:campo + '.primerApellido', requerido:requerido, obj:obj /}		
 			#{fap.texto id:id + '_segundoApellido', titulo:play.i18n.Messages.get('fap.tags.personafisica.segundoApellido'), campo:campo + '.segundoApellido', obj:obj /}		
 			#{fap.nip id:id + '_nip', titulo:play.i18n.Messages.get('fap.tags.personafisica.nip'), campo:campo + '.nip', requerido:requerido, obj:obj /}
-	#{/fap.grupo}
+		#{/fap.grupo}
 	#{/else}
 	
 #{/fap.field}
