@@ -13,13 +13,13 @@
 }%
 	
 	#{if label != null}
-		#{fap.grupo titulo:label, siCombo:siCombo, siComboValue:siComboValue, borde:grupoVisible}
+		#{fap.grupo titulo:label, siCombo:siCombo, siComboValue:siComboValue, visible:grupoVisible}
 			#{fap.texto id:id + '_entidad', titulo:play.i18n.Messages.get('fap.tags.personajuridica.entidad'), campo:campo + '.entidad', requerido:requerido, obj:obj /}		
 			#{fap.texto id:id + '_cif', titulo:play.i18n.Messages.get('fap.tags.personajuridica.cif'), campo:campo + '.cif', requerido:requerido, obj:obj /}
 		#{/fap.grupo}
 	#{/if}
 	#{else}
-		#{fap.grupo siCombo:siCombo, siComboValue:siComboValue, borde:false}
+		#{fap.grupo siCombo:siCombo, siComboValue:siComboValue, visible:false}
 			#{fap.texto id:id + '_entidad', titulo:play.i18n.Messages.get('fap.tags.personajuridica.entidad'), campo:campo + '.entidad', requerido:requerido, obj:obj /}		
 			#{fap.texto id:id + '_cif', titulo:play.i18n.Messages.get('fap.tags.personajuridica.cif'), campo:campo + '.cif', requerido:requerido, obj:obj /}
 		#{/fap.grupo}
